# electro_data_process_tool

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION_GUIDE_V5_TO_V6.md  MIGRATION_MAP.md  MIGRATION_PENDING.md  PUBLISH_CHECKLIST.md  README.en.md  README.md  TODO.md  V5_V6_BASELINE_ACCEPTANCE.md  WORKLOG.md  processing_core.py  pyproject.toml  pyrightconfig.json  requirements-frozen.txt  requirements.txt  run_v6.py  setup.bat  start.bat
.github/workflows/: ci.yml  release.yml
docs/: openapi.yaml
packaging/: .gitignore  README.md  build_installer.ps1  build_onedir.ps1  electrochem_v6.spec  electrochem_v6_launcher.py  installer.iss  requirements-pack.txt  runtime_data_dir_hook.py
reports/: CHANGELOG_V6_0_1.md  PACKAGING_PLAN_V6_0_1.md  RELEASE_CHECKLIST_V6_0_1.md
scripts/: baseline_regression.py  run_baseline_regression.ps1  run_stress_smoke.ps1  stress_smoke.py
src/electrochem_v6/: __init__.py  app.py  cli.py  config.py  smoke.py  stress.py
src/electrochem_v6/agent/: __init__.py  agent_controller.py  prompts.py  service.py  tool_executor.py  tools.py  tools_analysis.py  tools_catalyst.py  tools_data.py  tools_projects.py
src/electrochem_v6/core/: __init__.py  logging_policy.py  path_security.py  pipeline_adapter.py  process_service.py  processing_compat.py  processing_core_v6.py  processing_cv.py  processing_ecsa.py  processing_eis.py  processing_lsv.py  processing_pipeline.py  processing_quality.py  system_service.py  utils.py
src/electrochem_v6/llm/: __init__.py  base_client.py  config.py  config_adapter.py  deepseek_client.py  factory.py  kimi_client.py  openai_client.py  openai_compatible_client.py  qwen_client.py  vision_client.py
src/electrochem_v6/server/: __init__.py  http_server.py  request_utils.py  routes_get.py  routes_health.py  routes_history.py  routes_post.py  routes_projects.py
src/electrochem_v6/store/: __init__.py  _json_utils.py  conversations.py  database.py  history.py  (+3 more)
tests/: conftest.py  test_v6_agent_controller.py  test_v6_agent_service.py  test_v6_agent_tools.py  test_v6_agent_tools_extended.py  test_v6_auto_detect_start.py  test_v6_config_adapter.py  test_v6_config_precedence.py  test_v6_database.py  test_v6_e2e_real_data.py  test_v6_entry_points.py  test_v6_history.py  test_v6_legacy_sqlite.py  test_v6_llm.py  test_v6_logging_policy.py  test_v6_lsv_calc.py  test_v6_path_security.py  test_v6_process_service.py  test_v6_processing_cv.py  test_v6_processing_ecsa.py  test_v6_processing_eis.py  test_v6_processing_lsv.py  test_v6_processing_quality.py  test_v6_projects_concurrency.py  test_v6_routes_get.py  test_v6_server.py  test_v6_smoke.py  test_v6_stress.py  test_v6_system_service.py  test_v6_tools_catalyst.py  test_v6_tools_data.py  test_v6_tools_projects_extended.py  test_v6_ui_playwright.py  test_v6_utils.py  test_v6_vision_client.py
(+7 files in other folders)
