[project]
name = "electrochem-v6"
dynamic = ["version"]
description = "电化学数据处理与智能分析软件"
requires-python = ">=3.10"

[tool.semantic_release]
version_toml = []                              # we don't use pyproject version
version_variables = [
    "src/electrochem_v6/config.py:APP_VERSION",
]
branch = "main"
commit_message = "release: v{version}"
tag_format = "v{version}"
build_command = ""                             # no pip build; packaging is done separately
upload_to_pypi = false

[tool.semantic_release.changelog]
# v10+ configuration path
default_templates = { changelog_file = "CHANGELOG.md" }

[tool.semantic_release.commit_parser_options]
# Conventional Commits — angular preset
allowed_tags = [
    "feat",      # → minor
    "fix",       # → patch
    "perf",      # → patch
    "refactor",  # → patch (included so refactor commits get logged)
    "docs",
    "style",
    "test",
    "ci",
    "chore",
    "build",
    "release",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module-level import not at top (matplotlib.use must precede imports)
    "F401",   # imported but unused — many re-exports in __init__.py
    "F841",   # local var assigned but unused — common in data processing
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"processing_core_v6.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
